Countries, Nationalities and cities controller and view redone, but more has to be done

--- a/SchoolProject.Web/Views/Account/ChangeUser.cshtml
+++ b/SchoolProject.Web/Views/Account/ChangeUser.cshtml
@@ -6,62 +6,97 @@
 
 <h2>Change User</h2>
 
-<div class="row">
 
-    <div class="col-md-4 offset-md-4">
+@* <div class="row"> *@
+@* <div class="col-md-4 offset-md-4"> *@
 
-        <form method="post">
-            <div asp-validation-summary="ModelOnly"></div>
-            <!-- Hidden input for Username -->
-            @* <input type="hidden" asp-for="user.UserName" /> *@
+<hr/>
+@* <div class="container-fluid"> *@
+<div class="container-md">
+    <div class="row">
+        <partial name="_DisplayImages"/>
 
-            <div class="form-group">
-                <label asp-for="user.FirstName">First Name</label>
-                <input asp-for="user.FirstName" class="form-control"/>
-                <span asp-validation-for="user.FirstName" class="text-warning"></span>
+        <div class="col">
+            <div class="row">
+                <form method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly"></div>
+
+                    <!-- Hidden input for Username -->
+                    @* <input type="hidden" asp-for="UserName" /> *@
+                    <input type="hidden" asp-for="Id"/>
+
+                    <div class="form-group">
+                        <label asp-for="FirstName" class="control-label">First Name</label>
+                        <input asp-for="FirstName" class="form-control"/>
+                        <span asp-validation-for="FirstName" class="text-warning"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="LastName" class="control-label">Last Name</label>
+                        <input asp-for="LastName" class="form-control"/>
+                        <span asp-validation-for="LastName" class="text-warning"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="UserName" class="control-label">Username</label>
+                        <input asp-for="UserName" class="form-control"/>
+                        <span asp-validation-for="UserName" class="text-warning"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Address" class="control-label">Address</label>
+                        <input asp-for="Address" class="form-control"/>
+                        <span asp-validation-for="Address" class="text-warning"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="PhoneNumber" class="control-label">Phone Number</label>
+                        <input asp-for="PhoneNumber" class="form-control"/>
+                        <span asp-validation-for="PhoneNumber" class="text-warning"></span>
+                    </div>
+
+                    @* <div class="form-group"> *@
+                    @*     <label asp-for="Password" class="control-label">Password</label> *@
+                    @*     <input asp-for="Password" type="password" class="form-control"/> *@
+                    @*     <span asp-validation-for="Password" class="text-warning"></span> *@
+                    @* </div> *@
+
+                    @* <div class="form-group"> *@
+                    @*     <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label> *@
+                    @*     <input asp-for="ConfirmPassword" type="password" class="form-control"/> *@
+                    @*     <span asp-validation-for="ConfirmPassword" class="text-warning"></span> *@
+                    @* </div> *@
+
+                    <div class="form-group">
+                        <label asp-for="CountryId" class="control-label"></label>
+                        <select asp-for="CountryId" asp-items="Model.Countries" class="form-control"></select>
+                        <span asp-validation-for="CountryId" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="CityId" class="control-label"></label>
+                        <select asp-for="CityId" asp-items="Model.Cities" class="form-control"></select>
+                        <span asp-validation-for="CityId" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="ImageFile" class="control-label"></label>
+                        <input asp-for="ImageFile" class="form-control" id="imageInput" type="file" onchange="previewImages(event)" />
+                        <span asp-validation-for="ImageFile" class="text-danger"></span>
+                    </div>
+
+                    <br/>
+                    <div class="form-group">
+                        <input type="submit" value="Update" class="btn btn-primary"/>
+                        <a asp-action="Register" class="btn btn-success">Register New User</a>
+                    </div>
+
+                    <div class="text-success">@ViewBag.UserMessage</div>
+                </form>
+
             </div>
-
-            <div class="form-group">
-                <label asp-for="user.LastName">Last Name</label>
-                <input asp-for="user.LastName" class="form-control"/>
-                <span asp-validation-for="user.LastName" class="text-warning"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="user.Address" class="control-label">Address</label>
-                <input asp-for="user.Address" class="form-control"/>
-                <span asp-validation-for="user.Address" class="text-warning"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="user.PhoneNumber" class="control-label">Phone Number</label>
-                <input asp-for="user.PhoneNumber" class="form-control"/>
-                <span asp-validation-for="user.PhoneNumber" class="text-warning"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" asp-items="Model.Countries" class="form-control"></select>
-                <span asp-validation-for="CountryId" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" asp-items="Model.Cities" class="form-control"></select>
-                <span asp-validation-for="CityId" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <input type="submit" value="Update" class="btn btn-primary"/>
-                <a asp-action="ChangePassword" class="btn btn-success">Change Password</a>
-            </div>
-
-            <div class="text-success">@ViewBag.UserMessage</div>
-
-        </form>
-
+        </div>
     </div>
-
 </div>
 
 
