--- a/SchoolProject.Web/Views/Countries/Index.cshtml
+++ b/SchoolProject.Web/Views/Countries/Index.cshtml
@@ -7,60 +7,43 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary"><i class="fa-solid fa-stethoscope"></i> Create New </a>
+    <a asp-action="Create" class="btn btn-primary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a>
 </p>
 
 <table class="table table-hover" sortable="True" id="sortableTable">
 
     <thead>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProfilePhotoId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IdGuid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WasDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
+        <th>@Html.DisplayNameFor(model => model.ProfilePhotoId)</th>
+        <th>@Html.DisplayNameFor(model => model.Name)</th>
+        @* <th>@Html.DisplayNameFor(model => model.IdGuid)</th> *@
+        <th>@Html.DisplayNameFor(model => model.WasDeleted)</th>
+        @* <th>@Html.DisplayNameFor(model => model.CreatedAt)</th> *@
+        @* <th>@Html.DisplayNameFor(model => model.UpdatedAt)</th> *@
         <th></th>
     </tr>
     </thead>
+
     <tbody>
     @foreach (var item in Model)
     {
         <tr>
+            @* <td>@Html.DisplayFor(modelItem => item.ProfilePhotoId)</td> *@
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                <img alt="Image" class="img-thumbnail" height="150"
+                     src="@Url.Content(item.ProfilePhotoIdUrl)" width="auto"/>
             </td>
+            <td>@Html.DisplayFor(modelItem => item.Name)</td>
+            @* <td>@Html.DisplayFor(modelItem => item.IdGuid)</td> *@
+            <td>@Html.DisplayFor(modelItem => item.WasDeleted)</td>
+            @* <td>@Html.DisplayFor(modelItem => item.CreatedAt)</td> *@
+            @* <td>@Html.DisplayFor(modelItem => item.UpdatedAt)</td> *@
             <td>
-                @Html.DisplayFor(modelItem => item.ProfilePhotoId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdGuid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.WasDeleted)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"> <span class="fa-regular fa-pen-to-square"></span> Edit </a>
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"> <span class="fa-regular fa-file"></span> Details </a>
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><span class="fa-regular fa-trash-can"></span> Delete </a>
+                <div class="btn-group" role="group" aria-label="Basic outlined example">
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"> <span class="fa-regular fa-pen-to-square"></span> Edit </a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"> <span class="fa-regular fa-file"></span> Details </a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><span class="fa-regular fa-trash-can"></span> Delete </a>
+                </div>
             </td>
         </tr>
     }
