--- a/SchoolProject.Web/Views/Genders/IndexCards.cshtml
+++ b/SchoolProject.Web/Views/Genders/IndexCards.cshtml
@@ -12,7 +12,7 @@
 <h1>@pageTitle</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary"><i class="fa-solid fa-stethoscope"></i> Create New </a>
+    <a asp-action="Create" class="btn btn-primary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a>
 </p>
 
 
@@ -35,8 +35,8 @@
 
 
 <div class="album py-5 bg-body-tertiary">
-    <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="container-fluid">
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-5 g-3">
             @foreach (var item in Model)
             {
                 <div class="col">
