--- a/SchoolProject.Web/Views/SchoolClasses/Index.cshtml
+++ b/SchoolProject.Web/Views/SchoolClasses/Index.cshtml
@@ -12,7 +12,7 @@
 <h1>@pageTitle</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary"><i class="fa-solid fa-stethoscope"></i> Create New </a>
+    <a asp-action="Create" class="btn btn-primary p-2"><span class="fa-regular fa-square-plus fa-xl p-1 pe-1"></span> Create New </a>
 </p>
 
 <table class="table table-hover" sortable="True" id="sortableTable">
