--- a/SchoolProject.Web/Views/SchoolClasses/IndexCards.cshtml
+++ b/SchoolProject.Web/Views/SchoolClasses/IndexCards.cshtml
@@ -12,54 +12,42 @@
 <h1>@pageTitle</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary"><i class="fa-solid fa-stethoscope"></i> Create New </a>
+    <a asp-action="Create" class="btn btn-outline-primary">
+        <span class="material-symbols-outlined">add_circle</span>
+        @* <span class="fa-solid fa-stethoscope"></span> *@
+        Create New
+    </a>
 </p>
 
 
-@* <section class="py-5 text-center container"> *@
-@*     <div class="row py-lg-5"> *@
-@*         <div class="col-lg-6 col-md-8 mx-auto"> *@
-@*             <h1 class="fw-light">Album example</h1> *@
-@*             <p class="lead text-body-secondary"> *@
-@*                 Something short and leading about the collection below—its contents, *@
-@*                 the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it *@
-@*                 entirely. *@
-@*             </p> *@
-@*             <p> *@
-@*                 <a href="#" class="btn btn-primary my-2">Main call to action</a> *@
-@*                 <a href="#" class="btn btn-secondary my-2">Secondary action</a> *@
-@*             </p> *@
-@*         </div> *@
-@*     </div> *@
-@* </section> *@
-
-
 <div class="album py-5 bg-body-tertiary">
-    <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="container-fluid">
+        @* <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-5 g-3"> *@
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-3 row-cols-xxl-5 g-3">
             @foreach (var item in Model)
             {
                 <div class="col">
-                    @* <div class="card shadow-sm"> *@
-                    <div class="card shadow-sm">
+                    <div class="card w-auto shadow-lg">
+                        @* <div class="card shadow-sm"> *@
+                        @* <div class="card shadow-md" style="width: 18rem;"> *@
                         <div class="card-img-top">
                             <img src="@item.ProfilePhotoIdUrl" alt="Profile Photo" class="img-fluid">
                         </div>
 
                         <div class="card-body">
                             <p class="card-text">@Html.DisplayFor(modelItem => item.Name)</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    @* <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a> *@
-                                    @* <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Details</a> *@
-                                    @* <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a> *@
 
+                            <div class="d-flex justify-content-between align-items-center">
+
+                                <div class="btn-group">
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"> <span class="fa-regular fa-pen-to-square"></span> Edit </a>
                                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"> <span class="fa-regular fa-file"></span> Details </a>
                                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><span class="fa-regular fa-trash-can"></span> Delete </a>
-
                                 </div>
+
+                                @* <small class="text-body-secondary">@Html.DisplayNameFor(modelItem => item.Code)</small> *@
                                 <small class="text-body-secondary">@Html.DisplayFor(modelItem => item.Code)</small>
+                                @* <small class="text-body-secondary">@Html.DisplayNameFor(modelItem => item.Acronym)</small> *@
                                 <small class="text-body-secondary">@Html.DisplayFor(modelItem => item.Acronym)</small>
                             </div>
                         </div>
