--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarCoursesPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarCoursesPanel.cshtml
@@ -14,17 +14,13 @@
              xmlns="http://www.w3.org/2000/svg">
             <path d="M96 32C60.7 32 32 60.7 32 96V384H96V96l384 0V384h64V96c0-35.3-28.7-64-64-64H96zM224 384v32H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H544c17.7 0 32-14.3 32-32s-14.3-32-32-32H416V384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32z"/>
         </svg>
-        @* <span class="fa-solid fa-chalkboard fa-lg"></span> *@
-        @* <span class="fas fa-person-shelter"></span> *@
         Courses
     </a>
 
     <ul class="dropdown-menu">
         <li>
             <a asp-action="Index" asp-area="" asp-controller="Courses"
-               class="dropdown-item @(currentController == "Courses" ? "active" : "")">
-                @* <span class="fa-solid fa-chalkboard fa-lg"></span> *@
-                @* <span class="fas fa-person-shelter"></span> *@
+               class="dropdown-item @(currentAction == "Index" && currentController == "Courses" ? "active" : "")">
                 Courses
             </a>
         </li>
@@ -33,7 +29,7 @@
         </li>
         <li>
             <a asp-action="IndexCards" asp-area="" asp-controller="Courses"
-               class="dropdown-item @(currentController == "Courses" ? "active" : "")">
+               class="dropdown-item @(currentAction == "IndexCards" && currentController == "Courses" ? "active" : "")">
                 <span class="fas fa-person-through-window"></span>
                 Courses Cards
             </a>
