--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarTeachersPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarTeachersPanel.cshtml
@@ -15,41 +15,36 @@
              xmlns="http://www.w3.org/2000/svg">
             <path d="M192 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm-8 384V352h16V480c0 17.7 14.3 32 32 32s32-14.3 32-32V192h56 64 16c17.7 0 32-14.3 32-32s-14.3-32-32-32H384V64H576V256H384V224H320v48c0 26.5 21.5 48 48 48H592c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48H368c-26.5 0-48 21.5-48 48v80H243.1 177.1c-33.7 0-64.9 17.7-82.3 46.6l-58.3 97c-9.1 15.1-4.2 34.8 10.9 43.9s34.8 4.2 43.9-10.9L120 256.9V480c0 17.7 14.3 32 32 32s32-14.3 32-32z"/>
         </svg>
-        @* <span class="fa-solid fa-person-chalkboard fa-2xl"></span> *@
-        @* <span class="material-symbols-outlined">admin_panel_settings</span> *@
         Teachers
     </a>
 
     <ul class="dropdown-menu">
         <li>
             <a asp-action="Index" asp-area="" asp-controller="Teachers"
-               class="dropdown-item @(currentController == "Teachers" ? "active" : "")">
+               class="nav-link @(currentAction == "Index" && currentController == "Teachers" ? "active" : "")">
                 <span class="fas fa-person-through-window"></span>
                 Teachers
             </a>
         </li>
-
-        <li>
-            <hr class="dropdown-divider">
-        </li>
-        <li>
-            <a asp-action="Index" asp-area="" asp-controller="TeacherCourses"
-               class="dropdown-item @(currentController == "TeacherCourses" ? "active" : "")">
-                <span class="fas fa-person-through-window"></span>
-                TeacherCourses
-            </a>
-        </li>
-
         <li>
             <hr class="dropdown-divider">
         </li>
         <li>
             <a asp-action="IndexCards" asp-area="" asp-controller="Teachers"
-               class="dropdown-item @(currentController == "Teachers" ? "active" : "")">
+               class="nav-link @(currentAction == "IndexCards" && currentController == "Teachers" ? "active" : "")">
                 <span class="fas fa-person-through-window"></span>
                 Teachers Cards
             </a>
         </li>
+        <li>
+            <hr class="dropdown-divider">
+        </li>
+        <li>
+            <a asp-action="Index" asp-area="" asp-controller="TeacherCourses"
+               class="nav-link @(currentAction == "Index" && currentController == "TeacherCourses" ? "active" : "")">
+                <span class="fas fa-person-through-window"></span>
+                TeacherCourses
+            </a>
+        </li>
     </ul>
-
 </div>
