--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
@@ -155,38 +155,29 @@
         <div class="text-end">
             @if (User.Identity.IsAuthenticated)
             {
-                <a class="btn btn-light text-dark me-2  @(currentAction == "ChangeUser" && currentController == "Account" ? "active" : "")"
-                   asp-area="" asp-controller="Account" asp-action="ChangeUser">
-
-                    @* <span class="fa-solid fa-user-plus fa-2xl"></span> *@
+                <a asp-action="ChangeUser" asp-area="" asp-controller="Account"
+                   class="btn btn-light text-dark me-2  @(currentAction == "ChangeUser" && currentController == "Account" ? "active" : "")">
                     <span class="material-symbols-outlined">settings_account_box</span>
                     @* @User.Identity?.Name *@
                     Hello @await UserHelper.GetUserInitialsAsync()
                 </a>
 
-                <a class="btn btn-primary  @(currentAction == "LogOut" && currentController == "Account" ? "active" : "")"
-                   asp-area="" asp-controller="Account" asp-action="LogOut">
-
-                    @* <span class="fa-solid fa-sign-out fa-2xl"></span> *@
+                <a asp-action="LogOut" asp-area="" asp-controller="Account"
+                   class="btn btn-primary  @(currentAction == "LogOut" && currentController == "Account" ? "active" : "")">
                     <span class="material-symbols-outlined">logout</span>
-                    @* <span class="material-symbols-outlined">logout</span> *@
                     Logout
                 </a>
             }
             else
             {
-                <a class="btn btn-light text-dark me-2  @(currentAction == "Login" && currentController == "Account" ? "active" : "")"
-                   asp-area="" asp-controller="Account" asp-action="Login">
-
-                    @* <span class="fa-solid fa-right-to-bracket fa-2xl"></span> *@
+                <a asp-action="Login" asp-area="" asp-controller="Account"
+                   class="btn btn-light text-dark me-2  @(currentAction == "Login" && currentController == "Account" ? "active" : "")">
                     <span class="material-symbols-outlined">login</span>
                     Login
                 </a>
 
-                <a class="btn btn-primary  @(currentAction == "Register" && currentController == "Account" ? "active" : "")"
-                   asp-area="" asp-controller="Account" asp-action="Register">
-
-                    @* <span class="fa-solid fa-user-plus fa-2xl"></span> *@
+                <a asp-action="Register" asp-area="" asp-controller="Account"
+                   class="btn btn-primary  @(currentAction == "Register" && currentController == "Account" ? "active" : "")">
                     <span class="material-symbols-outlined">person_add</span>
                     Register
                 </a>
@@ -203,12 +194,6 @@
             </div>
 
             <div class="text-end">
-                @* <a *@
-                @*     aria-controls="offCanvasAccountConfiguration" class="btn btn-primary" *@
-                @*     data-bs-toggle="offcanvas" href="#offCanvasAccountConfiguration" role="button"> *@
-                @*     Account Configuration *@
-                @* </a> *@
-
                 <button
                     aria-controls="offCanvasAccountConfiguration" class="btn btn-info"
                     data-bs-target="#offCanvasAccountConfiguration" data-bs-toggle="offcanvas" type="button">
@@ -275,33 +260,3 @@
     </div>
 
 </div>
-
-
-<!-- Display user roles -->
-@* <div class="container"> *@
-@*     <div class="row"> *@
-@*         <div class="col"> *@
-@*             <h3>Roles:</h3> *@
-@*             <ul> *@
-@*                 @{ *@
-@*                     Debug.Assert(User != null, "User != null"); *@
-@*                     if (User.Identity.IsAuthenticated) *@
-@*                     { *@
-@*                         var userRoles1 = User.Claims.Where(c => c.Type == ClaimTypes.Role).Select(c => c.Value); *@
-@*                         foreach (var role in userRoles1) *@
-@*                         { *@
-@*                             <li>@role</li> *@
-@*                         } *@
-@*                     } *@
-@*                     if (userRoles != null) *@
-@*                     { *@
-@*                         foreach (var role in userRoles) *@
-@*                         { *@
-@*                             <li>@role</li> *@
-@*                         } *@
-@*                     } *@
-@*                 } *@
-@*             </ul> *@
-@*         </div> *@
-@*     </div> *@
-@* </div> *@
