--- a/SchoolProject.Web/Views/StudentCourses/Index.cshtml
+++ b/SchoolProject.Web/Views/StudentCourses/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary"><span class="fa-solid fa-stethoscope"></span> Create New </a>
+    <a asp-action="Create" class="btn btn-outline-primary"><span class="material-symbols-outlined"> add_box </span> Create New </a>
 </p>
 
 <table class="table table-hover" sortable="True" id="sortableTable">
