--- a/SchoolProject.Web/Views/Users/Index.cshtml
+++ b/SchoolProject.Web/Views/Users/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary"><span class="fa-solid fa-stethoscope"></span> Create New </a>
+    <a asp-action="Create" class="btn btn-outline-primary"><span class="material-symbols-outlined"> add_box </span> Create New </a>
     @* <a asp-action="Create" class="btn btn-outline-primary"><span class="fa-solid fa-stethoscope"></span> New Medic</a> *@
 </p>
 
