--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarGendersPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/Panels/_LayoutNavBarGendersPanel.cshtml
@@ -7,7 +7,7 @@
 
 <div class="dropdown">
 
-    <a class="nav-link dropdown-toggle @(currentController is "Genders" ? "active" : "") p-1"
+    <a class="nav-link dropdown-toggle @(currentController is "Genders" ? "active" : "") p-2"
        role="button" data-bs-toggle="dropdown" aria-expanded="false">
         <svg class="bi d-block mx-auto mb-1" fill="currentColor" height="2em" viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg">
@@ -29,6 +29,16 @@
         <li>
             <a asp-action="IndexCards" asp-area="" asp-controller="Genders"
                class="dropdown-item @(currentAction == "IndexCards" && currentController == "Genders" ? "active" : "")">
+                <span class="fas fa-person-through-window"></span>
+                Genders Cards
+            </a>
+        </li>
+        <li>
+            <hr class="dropdown-divider">
+        </li>
+        <li>
+            <a asp-action="IndexCards1" asp-area="" asp-controller="Genders"
+               class="dropdown-item @(currentAction == "IndexCards1" && currentController == "Genders" ? "active" : "")">
                 <span class="fas fa-person-through-window"></span>
                 Genders Cards
             </a>
